Final cleanup from semester 2